--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
     body {
-        background: grey;
+        background: rgb(102, 88, 88);
     }
 
     h1 {
@@ -21,14 +21,14 @@
         top: 18vh;
         margin: auto;
         display: grid;
-        background-color: brown;
+        background-color: rgb(54, 0, 0);
         width: 600px;
         height: 600px;
 
     }
 
     .block {
-        background-color: blueviolet;
+        background-color: rgb(255, 255, 255);
         margin: 0px;
         border-width: 0px;
     }
@@ -42,9 +42,9 @@
     }
 
 
-    .block:hover {
-        background-color: green;
-        transition: 1s;
+    .permahover {
+        background-color: rgb(0, 0, 0);
+        transition: .1s;
     }
 
 </style>
@@ -57,6 +57,7 @@
     <div id='input'>
         <input type='text' id="count" placeholder="What size grid? '<' 100">
         <input type='submit' id="submitC" onclick="grid()">
+        <input type='reset' id="resetC" onclick="resetContainer()">
     </div>
     <div id='container'>
     
